printer config backup

--- a/printer.cfg
+++ b/printer.cfg
@@ -9,7 +9,7 @@ initial_duration: .01
 gcode:
   ABS_PREHEAT
 #Brad might be my hero!!  Well he was till he broke my update but then he might have fixed it again so we will see!  Only time will tell!!  This Sucks!!!!!  Brad could be my hero again.
-#I have a feeling this is going to be a long night.  Lets find out!  AHHHHHHHHHH
+#I have a feeling this is going to be a long night.  Lets find out!  AHHHHHHHHHH  Last test hopefully
 
 
 [exclude_object]
