printer config backup

--- a/printer.cfg
+++ b/printer.cfg
@@ -19,7 +19,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_370049001051313133353932-if00
 restart_method: command
 
 [mcu can0]
-canbus_uuid: eb442146719f
+canbus_uuid: eb442146719f  #e87c5e5749f2
 
 [mcu RPi4]
 serial: /tmp/klipper_host_mcu
